<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_chats">Чаты</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_profile">Профиль</string>
    <string name="account">Аккаунт</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="settings">Настройки</string>
    <string name="exit_from_profile">Выйти из профиля</string>
    <string name="theme">Тема</string>
    <string name="data_and_storage">Данные хранилища</string>
    <string name="nickname">Никнейм</string>
    <string name="nickname_hint" translatable="false">\@nickname</string>

    <string name="clear_images_cache">Очистить кэш изображений</string>
    <string name="settings_storage_and_data">Настройки данных и хранилища</string>

    <string name="dialog_logout_title">Вы точно хотите выйти из профиля?</string>
    <string name="exit">Выйти</string>
    <string name="cancel">Отмена</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="light_theme">Свтелая</string>
    <string name="dark_theme">Тёмная</string>

    <string name="about_self">О себе</string>
    <string name="images_cache_cleared">Кэш изображений успешно очищен</string>

    <string name="type_message">Введите сообщение…</string>
    <string name="new_messages">Новые сообщения</string>
    <string name="error_sending_message">Ошибка отправки сообщения</string>
    <string name="forwarded_message">Пересланное сообщение</string>
    <string name="monday_short">Пон</string>
    <string name="tuesday_short">Вт</string>
    <string name="wednesday_short">Ср</string>
    <string name="thursday_short">Чт</string>
    <string name="friday_short">Пт</string>
    <string name="saturday_short">Сб</string>
    <string name="sunday_short">Вс</string>
    <string name="chats_search">Поиск чатов…</string>

    <string name="user_chats">Ваши чаты</string>
    <string name="recommendations_chats">Рекомендации</string>
    <string name="content">Контент</string>

    <string name="members">Участники</string>
    <string name="media">Медиа</string>
    <string name="privacy">Приватность</string>

    <string name="private_channel">Приватный</string>
    <string name="public_channel">Публичный</string>

    <string name="leave_channel">Покинуть</string>

    <string name="notifications">Уведомления</string>
    <string name="tread">Тред</string>

    <string name="add_description">Добавте описание</string>
    <string name="description">Описание</string>
</resources>